Closed
Bug 699347
Opened 14 years ago
Closed 14 years ago
Crash when viewing source of an XML file that has an XML declaration without the encoding pseudo-attribute [@ nsCharTraits<wchar_t>::length(wchar_t const*) ]
Categories
(Core :: DOM: HTML Parser, defect)
Core
DOM: HTML Parser
Tracking
()
RESOLVED
FIXED
mozilla10
People
(Reporter: ananuti, Assigned: hsivonen)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
|
4.36 KB,
patch
|
smaug
:
review+
|
Details | Diff | Splinter Review |
STR
1. start latest nightly build
2. open about:addons or about:memory or about:config or about:permissions or chrome://browser/content/places/places.xul or chrome://global/content/console.xul
3. press ctrl+u
bp-976ffce0-c80c-4237-b06d-c40a02111103
bp-55713f75-b0d4-46a0-9396-128332111103
bp-6ef6ca99-99df-45df-8f1a-811672111103
0 xul.dll nsCharTraits<wchar_t>::length obj-firefox/dist/include/nsCharTraits.h:378
1 xul.dll nsDependentString::nsDependentString obj-firefox/dist/include/nsTDependentString.h:90
2 xul.dll nsHtml5StreamParser::MaybeSetEncodingFromExpat parser/html/nsHtml5StreamParser.cpp:411
3 xul.dll HandleXMLDeclaration parser/html/nsHtml5StreamParser.cpp:440
4 xul.dll processXmlDecl parser/expat/lib/xmlparse.c:3491
5 xul.dll doProlog parser/expat/lib/xmlparse.c:3855
6 xul.dll prologProcessor parser/expat/lib/xmlparse.c:3759
7 xul.dll prologInitProcessor parser/expat/lib/xmlparse.c:3575
8 xul.dll MOZ_XML_Parse parser/expat/lib/xmlparse.c:1520
9 xul.dll nsHtml5StreamParser::FinalizeSniffing
10 xul.dll nsHtml5StreamParser::SniffStreamBytes parser/html/nsHtml5StreamParser.cpp:709
11 xul.dll nsHtml5StreamParser::DoDataAvailable parser/html/nsHtml5StreamParser.cpp:1019
12 xul.dll nsHtml5DataAvailable::Run parser/html/nsHtml5StreamParser.cpp:1063
13 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:631
14 xul.dll nsThreadStartupEvent::Run xpcom/threads/nsThread.cpp:201
15 nspr4.dll _PR_NativeRunThread nsprpub/pr/src/threads/combined/pruthr.c:426
16 nspr4.dll pr_root nsprpub/pr/src/md/windows/w95thred.c:122
17 msvcr80.dll msvcr80.dll@0x29ba
18 msvcr80.dll msvcr80.dll@0x2a46
19 ntdll.dll __RtlUserThreadStart
20 ntdll.dll _RtlUserThreadStart
last good https://hg.mozilla.org/mozilla-central/rev/6e219763ddd0
first bad https://hg.mozilla.org/mozilla-central/rev/cd9add22f090 Kyle Huey — Merge m-i to m-c.
pushlog https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=6e219763ddd0&tochange=cd9add22f090
Mozilla-inbound:
last good https://hg.mozilla.org/integration/mozilla-inbound/rev/a2e305e684e6
first bad https://hg.mozilla.org/integration/mozilla-inbound/rev/d9cc2539a85d
pushlog https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=a2e305e684e6&tochange=d9cc2539a85d
Suspected:
Bug 482921 - [HTML5] Re-implement view source syntax highlighting using the HTML5 parser
| Reporter | ||
Updated•14 years ago
|
Crash Signature: [@ xul.dll@0x20e2 ]
| Assignee | ||
Updated•14 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Updated•14 years ago
|
Assignee: nobody → hsivonen
Status: NEW → ASSIGNED
OS: Windows 7 → All
Hardware: x86 → All
| Assignee | ||
Comment 1•14 years ago
|
||
| Assignee | ||
Updated•14 years ago
|
Summary: Firefox 10.0a1 Crash [@ nsCharTraits<wchar_t>::length(wchar_t const*) ] → Crash when viewing source of an XML file that has an XML declaration without the encoding pseudo-attribute [@ nsCharTraits<wchar_t>::length(wchar_t const*) ]
| Assignee | ||
Updated•14 years ago
|
Crash Signature: [@ xul.dll@0x20e2 ] → [@ xul.dll@0x20e2 ]
[@ nsCharTraits<wchar_t>::length(wchar_t const*) ]
| Assignee | ||
Updated•14 years ago
|
Attachment #571581 -
Flags: review?(bugs)
Updated•14 years ago
|
Attachment #571581 -
Flags: review?(bugs) → review+
| Assignee | ||
Comment 2•14 years ago
|
||
Flags: in-testsuite+
Target Milestone: --- → mozilla10
Comment 3•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•