Bug 699347 - Avoid crashing when viewing source of XML files that have an XML declaration without the encoding pseudo-attribute. r=smaug.